fleet/demo-app/manifests/demoapp_san_deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo-app-san
  namespace: demo-app
  labels:
    app: demo-app-san

spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app-san
  template:
    metadata:
      labels:
        app: demo-app-san
    spec:
      containers:
        - name: demo-nginx
          image: nginxinc/nginx-unprivileged
          volumeMounts:
            - name: demo-nginx-default-conf
              readOnly: true
              mountPath: /etc/nginx/conf.d/
            - name: demo-app-san
              mountPath: /data/demo-app
      volumes:
        - name: demo-nginx-default-conf
          configMap:
            name: demo-nginx-default-conf
            items:
              - key: default.conf
                path: default.conf
        - name: demo-app-san
          persistentVolumeClaim:
            claimName: demo-app-san-pvc
