fleet/demo-app/manifests/demoapp_deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo-app
  labels:
    app: demo-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-nginx
          image: nginxinc/nginx-unprivileged
          volumeMounts:
            - name: demo-nginx-default-conf
              readOnly: true
              mountPath: /etc/nginx/conf.d/
            - name: demo-app
              mountPath: /data/demo-app
      volumes:
        - name: demo-nginx-default-conf
          configMap:
            name: demo-nginx-default-conf
            items:
              - key: default.conf
                path: default.conf
        - name: demo-app
          persistentVolumeClaim:
            claimName: demo-app-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app

spec:
  ports:
    - protocol: TCP
      name: web
      port: 8080
  selector:
    app: demo-app
